--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "joi": "^17.13.3",
+    "i18next": "^23.15.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
@@ -25,7 +25,9 @@
     "sequelize": "^6.37.3",
     "sequelize-auto": "^0.8.8",
     "winston": "^3.14.2",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^3.23.8",
+    "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
